# digestmvp

./: .gitignore  add-essay-img.js  bulk-add-embeddings.js  package-lock.json  package.json
supabase/: config.toml
supabase/functions/add-bookshelf-essay/: index.ts
supabase/functions/add-doc/: index.ts
supabase/functions/add-dom/: index.ts
supabase/functions/add-essays-bulk/: index.ts
supabase/functions/process-essay/: index.ts
supabase/functions/recommend-essays/: index.ts
supabase/functions/search/: index.ts
supabase/functions/test clustering/: Untitled-1.ipynb  cluster.ipynb  kmeans.py  main.py  pyproject.toml  whatever you want.ipynb
supabase/functions/update-essays/: index.ts
supabase/functions/update-small/: index.ts
