[tool.poetry]
name = "test clustering"
version = "0.1.0"
description = ""
authors = ["aleenavigoda <137472773+aleenavigoda@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
